Applied updates from twan in order to support the proposed changes to support the "lcl:localURL" attribute in the ResourceRef element.