@@ -16,8 +16,10 @@
  */
 package nl.mpi.metadata.cmdi.api.model.impl;
 
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.Collection;
 import java.util.UUID;
 import nl.mpi.metadata.api.MetadataException;
@@ -153,38 +155,38 @@ public class CMDIDocumentImplTest extends CMDIMetadataElementImplTest {
     }
 
     @Test
-    public void testGetDocumentResourceProxyById() throws URISyntaxException {
+    public void testGetDocumentResourceProxyById() throws URISyntaxException, MalformedURLException {
 	assertNull(document.getDocumentResourceProxy("rpId"));
 	// add a proxy
-	DataResourceProxy resourceProxy = new DataResourceProxy("rpId", new URI("http://resource"), "Resource", "test/mime-type");
+	DataResourceProxy resourceProxy = new DataResourceProxy("rpId", new URI("http://resource"), new URL("file:resource.txt"), "Resource", "test/mime-type");
 	document.addDocumentResourceProxy(resourceProxy);
 	assertEquals(resourceProxy, document.getDocumentResourceProxy("rpId"));
 	// replace by proxy with same id
-	DataResourceProxy resourceProxy2 = new DataResourceProxy("rpId", new URI("http://resource2"), "Resource", "test/mime-type");
+	DataResourceProxy resourceProxy2 = new DataResourceProxy("rpId", new URI("http://resource2"), new URL("file:resource.txt"), "Resource", "test/mime-type");
 	document.addDocumentResourceProxy(resourceProxy2);
 	assertEquals(resourceProxy2, document.getDocumentResourceProxy("rpId"));
     }
 
     @Test
-    public void testGetDocumentReferenceByURI() throws URISyntaxException {
+    public void testGetDocumentReferenceByURI() throws URISyntaxException, MalformedURLException {
 	assertNull(document.getDocumentReferenceByURI(new URI("http://resource")));
 	// add a proxy
-	DataResourceProxy resourceProxy = new DataResourceProxy("rpId", new URI("http://resource"), "Resource", "test/mime-type");
+	DataResourceProxy resourceProxy = new DataResourceProxy("rpId", new URI("http://resource"), new URL("file:resource.txt"), "Resource", "test/mime-type");
 	document.addDocumentResourceProxy(resourceProxy);
 	assertEquals(resourceProxy, document.getDocumentReferenceByURI(new URI("http://resource")));
 	// replace by proxy with same id
-	DataResourceProxy resourceProxy2 = new DataResourceProxy("rpId", new URI("http://resource2"), "Resource", "test/mime-type");
+	DataResourceProxy resourceProxy2 = new DataResourceProxy("rpId", new URI("http://resource2"), new URL("file:resource.txt"), "Resource", "test/mime-type");
 	document.addDocumentResourceProxy(resourceProxy2);
 	assertNull(document.getDocumentReferenceByURI(new URI("http://resource")));
 	assertEquals(resourceProxy2, document.getDocumentReferenceByURI(new URI("http://resource2")));
     }
 
     @Test
-    public void testAddDocumentResourceProxy() throws URISyntaxException {
+    public void testAddDocumentResourceProxy() throws URISyntaxException, MalformedURLException {
 	document.getResourceProxiesDirtyState().setDirty(false);
 
 	assertEquals(0, document.getDocumentReferencesCount());
-	DataResourceProxy resourceProxy = new DataResourceProxy("rpId", new URI("http://resource"), "Resource", "test/mime-type");
+	DataResourceProxy resourceProxy = new DataResourceProxy("rpId", new URI("http://resource"), new URL("file:resource.txt"), "Resource", "test/mime-type");
 	document.addDocumentResourceProxy(resourceProxy);
 	assertEquals(1, document.getDocumentReferencesCount());
 	assertEquals(resourceProxy, document.getDocumentReferences().iterator().next());
@@ -198,8 +200,8 @@ public class CMDIDocumentImplTest extends CMDIMetadataElementImplTest {
     }
 
     @Test
-    public void testRemoveDocumentResourceProxy() throws URISyntaxException {
-	DataResourceProxy resourceProxy = new DataResourceProxy("rpId", new URI("http://resource"), "Resource", "test/mime-type");
+    public void testRemoveDocumentResourceProxy() throws URISyntaxException, MalformedURLException {
+	DataResourceProxy resourceProxy = new DataResourceProxy("rpId", new URI("http://resource"), new URL("file:resource.txt"), "Resource", "test/mime-type");
 	document.addDocumentResourceProxy(resourceProxy);
 	assertEquals(1, document.getDocumentReferencesCount());
 
@@ -234,7 +236,7 @@ public class CMDIDocumentImplTest extends CMDIMetadataElementImplTest {
 
 	try {
 	    // Cause conflict: add md proxy
-	    document.addDocumentResourceProxy(new MetadataResourceProxy("mdrp", new URI("http://resource2"), "test/mime-type"));
+	    document.addDocumentResourceProxy(new MetadataResourceProxy("mdrp", new URI("http://resource2"), new URL("file:resource.txt"), "test/mime-type"));
 	    // Try to create resource proxy with same URI
 	    document.createDocumentResourceReference(new URI("http://resource2"), null, "test/mime-type");
 	    // Exception gets thrown, shouldn't get this far
@@ -271,7 +273,7 @@ public class CMDIDocumentImplTest extends CMDIMetadataElementImplTest {
 
 	try {
 	    // Cause conflict: add resource proxy
-	    document.addDocumentResourceProxy(new DataResourceProxy("mdrp", new URI("http://resource2"), "Resource", "test/mime-type"));
+	    document.addDocumentResourceProxy(new DataResourceProxy("mdrp", new URI("http://resource2"), new URL("file:resource.txt"), "Resource", "test/mime-type"));
 	    // Try to create metadata proxy with same URI
 	    document.createDocumentMetadataReference(new URI("http://resource2"), "test/mime-type");
 	    // Exception gets thrown, shouldn't get this far
@@ -283,7 +285,7 @@ public class CMDIDocumentImplTest extends CMDIMetadataElementImplTest {
 
     @Test
     public void testRegisterResourceProxyReference() throws Exception {
-	DataResourceProxy proxy = new DataResourceProxy(UUID.randomUUID().toString(), new URI("http://resource"), "Resource", "test/mime-type");
+	DataResourceProxy proxy = new DataResourceProxy(UUID.randomUUID().toString(), new URI("http://resource"), new URL("file:resource.txt"), "Resource", "test/mime-type");
 	// No references yet
 	assertEquals(0, document.getResourceProxyReferences(proxy).size());
 
@@ -300,7 +302,7 @@ public class CMDIDocumentImplTest extends CMDIMetadataElementImplTest {
 
     @Test
     public void testUnregisterResourceProxyReference() throws Exception {
-	DataResourceProxy proxy = new DataResourceProxy(UUID.randomUUID().toString(), new URI("http://resource"), "Resource", "test/mime-type");
+	DataResourceProxy proxy = new DataResourceProxy(UUID.randomUUID().toString(), new URI("http://resource"), new URL("file:resource.txt"), "Resource", "test/mime-type");
 
 	// Add a reference to the proxy
 	CMDIMetadataElement element = mockContext.mock(CMDIMetadataElement.class);
